style all forms

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
