update h1 styles, update study page styles, mobile/desktop friendly menus

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,4 +6,8 @@
   a {
     @apply text-brand-700 hover:underline dark:text-brand-400;
   }
+
+  h1 {
+    font-size: clamp(1.5rem, 2vw + 1rem, 1.875rem);
+  }
 }
