move html and body styles to global.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  @apply h-full;
+}
+
+body {
+  @apply bg-zinc-100 dark:bg-zinc-800 dark:text-zinc-50 text-zinc-800;
+}
+
 @layer base {
   a {
     @apply text-brand-700 hover:underline dark:text-brand-400;
