--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  @apply bg-zinc-100 dark:bg-zinc-800 dark:text-zinc-50 text-zinc-800;
+  @apply bg-zinc-100 text-zinc-800 dark:bg-zinc-800 dark:text-zinc-50;
 }
 
 @layer base {
